# wordle_jergovic_leo

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/wordle_lj2496/: __init__.py  wordle_lj2496.py
tests/: test_wordle_lj2496.py
