[tool.poetry]
name = "wordle_lj2496"
version = "0.1.0"
description = "A package implementing wordle functions"
authors = ["Leo Jergovic"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)"
]
